--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
             border-radius: 2px; 
         }
 
-        /* Standard Text Blocks */
         .text-block { 
             text-align: left;
             line-height: 1.8; 
@@ -69,7 +68,6 @@
             white-space: pre-wrap; 
         }
 
-        /* THE DIALOGUE BOX (Discord Style) */
         .dialogue-box {
             background: #0e0e1a; 
             border: 1px solid #202225;
@@ -104,13 +102,12 @@
             font-weight: bold;
             transition: 0.3s;
             display: inline-block;
-            margin: 0 10px;
+            margin: 5px 10px;
         }
 
         .nav-btn:hover { background: #fff; color: #121212; }
         .page-indicator { font-size: 0.9rem; color: #555; margin: 0 20px; vertical-align: middle; }
 
-        /* Jump to Page Input */
         .jump-container {
             margin-top: 25px;
             color: #666;
@@ -129,11 +126,8 @@
             border-radius: 3px;
         }
 
-        .jump-input:focus {
-            border-color: #fff;
-        }
+        .jump-input:focus { border-color: #fff; }
 
-        /* Hide number input spinners (optional but looks cleaner) */
         .jump-input::-webkit-outer-spin-button,
         .jump-input::-webkit-inner-spin-button {
             -webkit-appearance: none;
@@ -156,18 +150,14 @@
     <footer id="nav-footer"></footer>
 
     <script>
-        let totalPagesCount = 1; // Global to access in jump function
+        let totalPagesCount = 1;
 
         function jumpToPage(event) {
             if (event.key === "Enter") {
                 let page = parseInt(event.target.value);
-                
                 if (isNaN(page)) return;
-
-                // Restrict bounds
                 if (page < 1) page = 1;
                 if (page > totalPagesCount) page = totalPagesCount;
-
                 window.location.search = `?p=${page}`;
             }
         }
@@ -188,9 +178,9 @@
                     return;
                 }
 
-                // Calculate total pages for validation
                 const pageKeys = Object.keys(data.pages).sort((a,b) => a-b);
                 totalPagesCount = pageKeys.length;
+                const lastPage = pageKeys[pageKeys.length - 1];
 
                 data.pages[currentPage].forEach(block => {
                     const div = document.createElement('div');
@@ -231,6 +221,7 @@
                     ${prevNum > 0 ? `<a href="?p=${prevNum}" class="nav-btn">PREV</a>` : ''}
                     <span class="page-indicator">PG. ${currentPage} / ${totalPagesCount}</span>
                     ${data.pages[nextNum.toString()] ? `<a href="?p=${nextNum}" class="nav-btn">NEXT</a>` : ''}
+                    ${currentPage !== lastPage ? `<a href="?p=${lastPage}" class="nav-btn">LAST</a>` : ''}
                     
                     <div class="jump-container">
                         GOTO PAGE: <input type="number" 
